22/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ceweb-app
  namespace: ceweb
spec:
  type: NodePort
  selector:
    app: ceweb
    version: "1.0"
  ports:
  - port: 80
    targetPort: 8080
