22/ceweb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceweb-ingress
  namespace: ceweb
spec:
  rules:
  - host: ceweb.cosmeticevolution.net
    http:
      paths:
      - pathType: Prefix
        path: /
        backend: 
          service:
            name: ceweb-app
            port:
              number: 80
